--- a/src/docs/asciidoc/slides/shiny.adoc
+++ b/src/docs/asciidoc/slides/shiny.adoc
@@ -53,5 +53,6 @@ Loads!
 
 include::features/let-and-const.adoc[]
 include::features/loops.adoc[]
+include::features/iterators.adoc[]
 include::features/destructure.adoc[]
 include::features/parameters.adoc[]
