placeholder for arrow functions

--- a/src/docs/asciidoc/slides/shiny.adoc
+++ b/src/docs/asciidoc/slides/shiny.adoc
@@ -56,3 +56,4 @@ include::features/loops.adoc[]
 include::features/iterators.adoc[]
 include::features/destructure.adoc[]
 include::features/parameters.adoc[]
+include::features/arrow-functions.adoc[]
