--- a/src/docs/asciidoc/slides/future.adoc
+++ b/src/docs/asciidoc/slides/future.adoc
@@ -1,17 +1,28 @@
 
 == Into The Future
 
-So, once we're up to speed on ES6 can we relax for the next 5 and half years?  
+[%step]
+* ES2016 is already on the move
 
-In short, No.
+* So is ES2017
 
-ES7, or we should really get used to calling ES2016 is already in train.  And so is ES2017.  And ES2018.
+* And ES2018
 
-What's in?  Don't know yet, but possibles include ...
+[NOTE.speaker]
+--
+So, once we're up to speed on ES6 can we relax for the next 5 and half years?
 
-"Yea, well, I could write a shim/monkeypatch/function that does that ..."  
-And yea you could.  By the nature of things, your JavaScript execution environment is always going to be behind your development environment. (Just like Java! and C#! and C++! and ...)  Tools like Babel and Traceur allow us to work with the latest features, while targetting your existing runtime ecosystem.  And yea, while you could write a shim, I'm happy to let someone else do it for me, because a) I'm lazy and b) they'll probably make a better job of it :)  
+In short, No.  JavaScript is now on a cycle - there will be a new timeboxed release each year - the features that are done are in, those that aren't are out.
 
-So, if you're not already, get using ES6 in your toolchain.  And if you, turn it up to 7.
+ES7, or we should really get used to calling ES2016 is already in train.  And so is ES2017.  And ES2018.  You can see what's happening where on the Ecmascript/TC39 GitHub repository.
 
-As a little "oh look at the circularity", one of the proposed new features for ES8 is macros.  Not crappy C style text replacement macros. No. Lisp style meta-programming macros.  So maybe, 20 years after Eich's mad fortnight, we will end up with Scheme in the browser after all ...
+What's in ES2016?  Don't know yet, but possibles include Object.values/Object.entries, some string methods, async/await,  SIMD extensions, atomic operations, tuples.
+
+"Yea, well, I could write a shim/monkeypatch/function that does that ..."
+And yea you could.  By the nature of things, your JavaScript execution environment is always going to be behind your development environment. (Just like Java! and C#! and C++! and ...)  Tools like Babel and Traceur allow us to work with the latest features, while targetting your existing runtime ecosystem.  And yea, while you could write a shim, I'm happy to let someone else do it for me, because a) I'm lazy and b) they'll probably make a better job of it :)
+
+(As a little "oh look at the circularity", one of the proposed new features for ES8 is macros.  Not crappy C style text replacement macros. No. Lisp style meta-programming macros.  So maybe, 20 years after Eich's mad fortnight, we will end up with Scheme in the browser after all ...)
+
+So, if you're not already, get using ES6 in your toolchain.  And once you have, start turning it up to 7.
+
+JavaScript has, as I hope I've shown, been quite profoundly changed by ES6, but that's only really the beginning.
